<resources>
    <!-- App Info -->
    <string name="app_name">Modern Calculator</string>
    <string name="developer_credit">Developed by Dev divineema388</string>
    
    <!-- Navigation Menu -->
    <string name="menu_calculator">Calculator</string>
    <string name="menu_about">About</string>
    
    <!-- Calculator -->
    <string name="display_hint">0</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_add">+</string>
    <string name="btn_subtract">-</string>
    <string name="btn_multiply">×</string>
    <string name="btn_divide">÷</string>
    <string name="btn_equals">=</string>
    <string name="btn_clear">C</string>
    <string name="btn_decimal">.</string>
    <string name="btn_percent">%</string>
    <string name="btn_plus_minus">±</string>
    
    <!-- About Fragment -->
    <string name="about_title">About</string>
    <string name="about_description">A modern calculator app with sleek UI and smooth functionality.\n\nVersion 1.0</string>
    <string name="github_link">GitHub: divineema388</string>
</resources>