<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_calculator" />
            
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about" />
    </group>

    <item android:title="Credits">
        <menu>
            <item
                android:id="@+id/nav_credits"
                android:title="@string/developer_credit"
                android:enabled="false"/>
        </menu>
    </item>
</menu>